# mlops_project

./: .gitignore  README.md  data.dvc  data.py  evaluate.dockerfile  main.py  model.py  pyproject.toml  requirements.txt  requirements_dev.txt  tasks.py  train.dockerfile
.devcontainer/: devcontainer.json
.github/: dependabot.yaml
.github/workflows/: codecheck.yaml  tests.yaml
configs/: sweep.yaml
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
models/: trained_model.pth
src/mlops_project/: data.py  evaluate.py  main.py  model.py  train.py  visualize.py
src/mlops_project/hydra_conf/: config.yaml  model_conf.yaml  training_conf.yaml
tests/: test_data.py  test_model.py
