[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops_project"
version = "0.0.1"
description = "MLOps Project"
authors = [
  { name = "YarinB", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "matplotlib>=3.10.8",
    "numpy<2.0",
    "pandas>=2.3.3",
    "scikit-learn==1.8.0",
    "torch>=2.6.0,<2.7",
    "torchvision>=0.21.0,<0.22",
    "typer>=0.21.0",
    "gdown>=5.2.0",
    "hydra-core>=1.3.2",
    "loguru>=0.7.3",
    "wandb>=0.23.1",
    "pytorch-lightning>=2.6.0",
    "google-api-python-client>=2.187.0",
    "requests>=2.32.5",
    "httpx>=0.28.1",
    "locust>=2.43.1",
    "onnx>=1.19.0",
    "onnxruntime>=1.23.2",
    "onnxscript>=0.5.0",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "mkdocs-material==9.4.6",
    "mkdocs==1.6.1",
    "pre-commit==4.1.0",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "mkdocstrings-python==1.12.2",
    "mypy>=1.19.1",
    "snakeviz>=2.2.2",
    "pytest-mock>=3.15.1",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 120
lint.select = ["I"]

[tool.coverage.run]
omit = ["tests/*"]

[project.scripts]
train = "mlops_project.train:train"
evaluate = "mlops_project.evaluate:main"
visualize = "mlops_project.visualize:main"
preprocess_data = "mlops_project.data:preprocess_data"
